# storebot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DISCUSSION.md  LICENSE  README.md  pyproject.toml
.github/scripts/: ollama_codebase_review.py  ollama_review.py  openai_review.py
.github/workflows/: ci.yml  claude.yml  codebase-review.yml  release.yml
alembic/: env.py
alembic/versions/: 0a2e4adfe3d2_add_feedback_left_at_to_orders.py  80dfa55ce86d_add_listing_snapshots_table.py  89b76ef106cb_add_previous_status_to_products.py  8fcd3a05b7fe_initial_schema.py  ba506cad3529_add_tradera_categories_table.py  c364b1dcc103_add_api_usage_table.py  d500fe688d0d_add_weight_grams_tracking_number_label_.py  d7f3a1b2c4e5_add_price_proposals_table.py  ea950e4c057e_make_order_product_id_nullable.py
deploy/: backup.sh  storebot.service
docs/: code-review.md  development.md  installation.md  maintenance.md  usage.md
src/storebot/: agent.py  cli.py  config.py  db.py  logging_config.py  mcp_server.py  retry.py
src/storebot/bot/: formatting.py  handlers.py
src/storebot/tools/: accounting.py  analytics.py  blocket.py  conversation.py  definitions.py  dispatch.py  fortnox.py  helpers.py  image.py  listing.py  marketing.py  order.py  postnord.py  pricing.py  repricing.py  schemas.py  scout.py  tradera.py
src/storebot/tui/: log_viewer.py
tests/: conftest.py  test_accounting.py  test_agent.py  test_analytics.py  test_blocket.py  test_cli.py  test_compaction.py  test_conversation.py  test_db.py  test_dispatch.py  test_formatting.py  test_handlers.py  test_image.py  test_listing.py  test_log_viewer.py  test_logging_config.py  test_marketing.py  test_mcp_server.py  test_model_routing.py  test_order.py  test_parallel.py  test_postnord.py  test_pricing.py  test_reflection.py  test_repricing.py  test_retry.py  test_schemas.py  test_scout.py  test_thinking.py  test_tool_filtering.py  test_tradera.py  test_usage.py
