[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storebot"
version = "0.1.0"
description = "AI-powered agent for managing a Swedish country shop"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13,<2.0",
    "anthropic>=0.79,<2.0",
    "python-telegram-bot[job-queue]>=20,<22",
    "zeep>=4.2,<5.0",
    "requests>=2.31,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlite-vec",
    "pillow>=12.1.1,<13.0",
    "reportlab>=4.0,<5.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
storebot = "storebot.bot.handlers:main"
storebot-authorize-tradera = "storebot.cli:authorize_tradera"

[tool.hatch.build.targets.wheel]
packages = ["src/storebot"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
