[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storebot"
dynamic = ["version"]
description = "AI-powered agent for selling on Swedish marketplaces"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "anthropic>=0.79,<2.0",
    "mcp>=1.0,<2.0",
    "python-telegram-bot[job-queue]>=20,<22",
    "zeep>=4.2,<5.0",
    "requests>=2.31,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlite-vec",
    "pillow>=12.1.1,<13.0",
    "reportlab>=4.0,<5.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "textual>=0.89",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
storebot = "storebot.bot.handlers:main"
storebot-authorize-tradera = "storebot.cli:authorize_tradera"
storebot-logs = "storebot.tui.log_viewer:main"
storebot-sync-categories = "storebot.cli:sync_categories"

[tool.hatch.version]
path = "src/storebot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/storebot"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/storebot"]
omit = ["*/__init__.py"]
branch = true

[tool.coverage.report]
# 100% line coverage; 99% combined with branch coverage (49 partial branches
# from loop exits and multi-condition guards remain uncovered).
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__"',
]

[tool.semantic_release]
version_variables = ["src/storebot/__init__.py:__version__"]
version_toml = []
branch = "main"
build_command = ""
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
